<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.baxi.android.rft_kocsmapp.MainActivity">

    <Button
        android:id="@+id/button10"
        android:layout_width="202dp"
        android:layout_height="76dp"
        android:layout_marginTop="16dp"
        android:onClick="exitApp"
        android:text="@string/button_exit"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="202dp"
        android:layout_height="76dp"
        android:layout_marginTop="16dp"
        android:onClick="suggestOne"
        android:text="@string/button_suggest"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="202dp"
        android:layout_height="76dp"
        android:layout_marginTop="16dp"
        android:onClick="showMap"
        android:text="@string/button_map"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="202dp"
        android:layout_height="76dp"
        android:onClick="showPubs"
        android:text="@string/button_pubs"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="90dp" />

    <Button
        android:id="@+id/button11"
        android:layout_width="117dp"
        android:layout_height="40dp"
        android:onClick="facebookLogin"
        android:text="@string/button_login"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
